Bug 317923 - Vi input mode should support Ctrl+Cursor shortcuts also in visual mode
Summary: Vi input mode should support Ctrl+Cursor shortcuts also in visual mode
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Simon St James
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-06 12:44 UTC by Andreas
Modified: 2013-04-11 13:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas 2013-04-06 12:44:34 UTC
In visual mode the shortcut Ctrl+Cursor does not work, while it does in insert mode.

Reproducible: Always

Steps to Reproduce:
1. Open kate
2. Enable vi input mode
3. Press Ctrl+Cursor (right or left)
Actual Results:  
Nothing.

Expected Results:  
Cursor should move by one word to the right or left.

Workaround is to change to insert mode with i, press Ctrl+Curser, return to visual mode with Esc.
Comment 1 Simon St James 2013-04-11 13:15:37 UTC
Git commit f0649962a259d11019b84b2e652c1892daba0a27 by Simon St James.
Committed on 11/04/2013 at 15:08.
Pushed by sstjames into branch 'master'.

Extend TestPressKey so that it can deal with e.g.  \\ctrl-\\left, and implement ctrl-left and ctrl-right in both normal and visual modes.

M  +2    -0    part/vimode/katevinormalmode.cpp
M  +2    -0    part/vimode/katevivisualmode.cpp
M  +21   -0    tests/vimode_test.cpp

http://commits.kde.org/kate/f0649962a259d11019b84b2e652c1892daba0a27