Extend TestPressKey so that it can deal with e.g.  \\ctrl-\\left, and implement ctrl-left and ctrl-right in both normal and visual modes.

BUG:317923